<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="Tanggal" />
            <TextView
                android:text="@string/samadengan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_item_info_tanggal"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/perihal" />
            <TextView
                android:text="@string/samadengan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_item_info_perihal"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:text="@string/detail_pengumuman"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />




    </LinearLayout>
</androidx.cardview.widget.CardView>