<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/nis" />
            <TextView
                android:text="@string/samadengan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_item_nilai_nis"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/nama" />
            <TextView
                android:text="@string/samadengan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_item_nilai_nama"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/kelas" />
            <TextView
                android:text="@string/samadengan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_item_nilai_kelas"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="Mapel" />
            <TextView
                android:text="@string/samadengan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_item_nilai_nama_mapel"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="PTS Gasal" />
            <TextView
                android:text="@string/samadengan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_item_nilai_pts_gasal"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="PAS Gasal" />
            <TextView
                android:text="@string/samadengan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_item_nilai_pas_gasal"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout><LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="PTS Genap" />
            <TextView
                android:text="@string/samadengan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_item_nilai_pts_genap"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="PAS Genap" />
            <TextView
                android:text="@string/samadengan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_item_nilai_pas_genap"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>